--- a/shared/scss/elements/_elements.html-body.scss
+++ b/shared/scss/elements/_elements.html-body.scss
@@ -10,7 +10,7 @@ body {
     overflow-x: hidden;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale; //firefox font too bold solution
-    background-color: transparent;
+    background-color: $color-3;
 }
 
 body {
