--- a/shared/scss/_tools.mixins.scss
+++ b/shared/scss/_tools.mixins.scss
@@ -328,15 +328,18 @@
     @include font-heavy;
     display: inline-block;
     padding: $space-xxs $space-m;
+    border: 1px solid $black;
     text-decoration: none;
     margin-right: $space-xxs;
     margin-bottom: $base-spacing-unit;
+    border-radius: 6px;
+    box-shadow: 0 1px 4px $color-grey-dark, inset 0 0 0 2px $color-3;
     transition: {
         property: background-color, color, transform, box-shadow;
         duration: .2s, .2s, .2s, .2s;
         timing-function: ease-in-out, ease-in-out, ease-in-out, ease-in-out;
     }
-    text-transform: uppercase;
+    //text-transform: uppercase;
 }
 
 @mixin main-button-text() {
