--- a/shared/scss/components/_components.header.scss
+++ b/shared/scss/components/_components.header.scss
@@ -2,29 +2,33 @@
     $class: c-header;
 
     transition: background-color .15s ease-in-out;
-    height: 60px;
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: transparent;
+    //width: 100%;
+    height: 80px;
+    margin-bottom: 62px;
+    padding: 8px;
+    background-color: $black;
     border-bottom: $white 1px solid;
     z-index: 10;
 
     &--logo {
-
     }
 
-        &--home-link {
-            width: 130px;
+        &--site-title {
+            //width: 100px;
+            width: 72px;
             margin-right: 25%;
+            padding: 8px;
+            position: relative;
             float: right;
+            transform: translate(-50%);
+            background-color: $black;
+            border-radius: 0 0 8px 8px;
         }
 
-            &--site-title {
-                position: absolute;
-                visibility: hidden;
-            }
+        &--site-name {
+            position: absolute;
+            visibility: hidden;
+        }
 
     &--quick-links {
 
@@ -35,12 +39,19 @@
     }
 
     @media (min-width: $m-bp) {
-        height: 80px;
+        height: 120px;
+        margin-bottom: 72px;
+        position: relative;
+        top: auto;
+        left: auto;
 
-        &--home-link {
-            width: 152px;
+        &--site-title {
+            width: 102px;
+            height: 155px;
+            margin-right: 0;
             transform: translate(0);
             float: left;
+            display: block;
         }
     }
 }
